--- a/main.html
+++ b/main.html
@@ -7,8 +7,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<div class="box" >
+	<h2>This is center</h2>
+    </div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
